--- a/src/assets/scss/_utilities.scss
+++ b/src/assets/scss/_utilities.scss
@@ -8,11 +8,15 @@
 }
 
 .u-font-primary {
-    font-family: 'Noto Serif', serif;
+    font-family: 'Lato', sans-serif;
 }
 
 .u-font-secondary {
-    font-family: 'Lato', sans-serif;
+    font-family: 'Scope One', serif;
+}
+
+.u-font-special {
+    font-family: 'Kaushan Script', cursive;
 }
 
 .u-no-outline:focus {
