--- a/src/assets/scss/_navigation.scss
+++ b/src/assets/scss/_navigation.scss
@@ -26,10 +26,10 @@
             transform: translateY(100%);
             > a {
                 display: block;
-                padding: 8px 5px;
+                padding: 7px 5px;
                 color: #ffffff;
                 font-family: 'Lato', sans-serif;
-                font-size: 1.2rem;
+                font-size: 1rem;
                 font-weight: 700;
                 text-transform: uppercase;
                 text-align: center;
@@ -40,7 +40,7 @@
 }
 
 .body.show-nav {
-    .site-header {
+    .site-header, .site-header--noLogo {
         z-index: 55;
         background: none;
         border: none;
@@ -79,6 +79,6 @@
 
 @include media-breakpoint-up(md) {
     .nav-mobile .nav-main__list > li > a {
-        font-size: 1.6rem;
+        font-size: 1.4rem;
     }
 }
