--- a/src/assets/scss/_footer.scss
+++ b/src/assets/scss/_footer.scss
@@ -1,5 +1,5 @@
 .site-footer {
-    background-color: $dark-secondary;
+    // background-color: $dark-secondary;
 }
 .site-footer__logo {
     max-width: 260px;
