--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -6,7 +6,7 @@ body {
     background-color: #0f1621;
     color: #f4f4f4;
     font-family: 'Lato', sans-serif;
-    line-height: 1.8;
+    line-height: 1.6;
 }
 
 h1, h2, h3, h4, h5, h6,
@@ -19,7 +19,13 @@ hr {
 }
 
 @include media-breakpoint-up(lg) {
-    .lead-lg {
-        font-size: 1.25rem;
+    html {
+        font-size: 18px;
+    }
+    body {
+        line-height: 1.7;
+    }
+    .lead {
+        font-size: 1.2rem;
     }
 }
