--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2,6 +2,7 @@
 
 @import "bootstrap/bootstrap.scss";
 @import "global.scss";
+@import "fonts.scss";
 
 @import "banner.scss";
 @import "footer.scss";
