--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -1,6 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Lato:300,400,400i,700|Noto+Serif:400,400i,700');
-@import url('https://fonts.googleapis.com/css?family=Kaushan+Script|Scope+One');
-
+// @import url('https://fonts.googleapis.com/css?family=Kaushan+Script|Scope+One');
 body {
     // background-color: #16171f;
     background-color: #0f1621;
