--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -1,4 +1,5 @@
-// @import url('https://fonts.googleapis.com/css?family=Kaushan+Script|Scope+One');
+@import url('https://fonts.googleapis.com/css?family=Kaushan+Script|Scope+One|Lato:300,400,400i,700');
+
 body {
     // background-color: #16171f;
     background-color: #0f1621;
