adding nextjs forty

--- a/src/assets/scss/_banner.scss
+++ b/src/assets/scss/_banner.scss
@@ -36,6 +36,10 @@
     background-image: url(../img/bg-banner-gatsby-starters.jpg);
 }
 
+.banner--nextjs-starters {
+    background-image: url(../img/bg-banner-nextjs-starters.jpg);
+}
+
 .banner--blog {
     margin-bottom: 4rem;
     background-image: url(../img/bg-banner-blog.jpg);
