--- a/src/assets/scss/_banner.scss
+++ b/src/assets/scss/_banner.scss
@@ -26,7 +26,7 @@
 
 .banner--home {
     margin-bottom: 4rem;
-    background-image: url(../img/bg-banner-home-min.jpg);
+    background-image: url(../img/bg-banner-home-mobile.jpg);
     .banner__content {
         height: 100vh;
     }
@@ -59,6 +59,7 @@
         }
     }
     .banner--home {
+        background-image: url(../img/bg-banner-home-min.jpg);
         h1 {
             font-size: 3.5rem;
         }
