--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Kaushan+Script|Scope+One|Lato:300,400,400i,700');
+@import url('https://fonts.googleapis.com/css?family=Kaushan+Script|Scope+One|Lato:300,300i,400,400i,700');
 
 body {
     // background-color: #16171f;
